gh-194: Migrate koryphe to Java 11.